--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "satvic bajpai",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
